@@ -17,6 +17,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -34,7 +35,7 @@ public class OrderService {
 
 
     /**
-     * Crea un pedido desde el carrito (CORREGIDO)
+     * Crea un pedido desde el carrito (LOGICA ORIGINAL CONSERVADA)
      */
     @Transactional
     public OrderDTO createOrderFromCart(Long usuarioId, Long cartId, CreateOrderRequestDTO request) {
@@ -52,40 +53,40 @@ public class OrderService {
         String codigo = "PED-" + System.currentTimeMillis();
 
         // -------------------------------------------------------
-        // 1. 🧮 CALCULADORA: Sumar los items ANTES de crear el pedido
+        // 1. 🧮 CALCULADORA
         // -------------------------------------------------------
         BigDecimal subtotalCalculado = cart.getItems().stream()
                 .map(item -> item.getPrecioUnitarioSnapshot().multiply(BigDecimal.valueOf(item.getCantidad())))
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
 
-        BigDecimal descuento = BigDecimal.ZERO; // TODO: Obtener de cupones
-        BigDecimal impuestos = BigDecimal.ZERO; // TODO: Configuración
-        BigDecimal costoEnvio = BigDecimal.ZERO; // TODO: Tarifa envío
+        BigDecimal descuento = BigDecimal.ZERO;
+        BigDecimal impuestos = BigDecimal.ZERO;
+        BigDecimal costoEnvio = BigDecimal.ZERO;
 
         // Total Final Real
         BigDecimal totalCalculado = subtotalCalculado.add(impuestos).add(costoEnvio).subtract(descuento);
         // -------------------------------------------------------
 
-        // Crear pedido con los VALORES CALCULADOS
+        // Crear pedido
         Order order = Order.builder()
                 .usuario(usuario)
                 .codigo(codigo)
                 .fechaPedido(LocalDateTime.now())
                 .estado(OrderStatus.PENDIENTE)
-                .subtotal(subtotalCalculado) // <--- ¡AQUÍ USAMOS EL VALOR REAL!
+                .subtotal(subtotalCalculado)
                 .descuento(descuento)
                 .impuestos(impuestos)
                 .costoEnvio(costoEnvio)
-                .total(totalCalculado)       // <--- ¡AQUÍ TAMBIÉN!
+                .total(totalCalculado)
                 .metodoPago(request.getMetodoPago())
                 .direccionEnvio(request.getDireccionEnvio())
                 .nota(request.getNota())
-                .items(List.of())
+                .items(List.of()) // Inicializamos vacía
                 .build();
 
         Order savedOrder = orderRepository.save(order);
 
-        // Crear items del pedido y mover inventario
+        // Crear items y mover inventario
         List<OrderItem> orderItems = cart.getItems().stream()
                 .map(cartItem -> {
                     ProductVariant variant = cartItem.getVariante();
@@ -110,7 +111,7 @@ public class OrderService {
                                     .multiply(BigDecimal.valueOf(cartItem.getCantidad())))
                             .build();
 
-                    // Crear movimiento de inventario (reserva)
+                    // Movimiento de inventario
                     InventoryMovement movement = InventoryMovement.builder()
                             .lote(batch)
                             .variante(variant)
@@ -123,13 +124,11 @@ public class OrderService {
 
                     inventoryMovementRepository.save(movement);
 
-                    // Actualizar cantidad disponible del lote
                     if (batch != null) {
                         batch.setCantidadDisponible(batch.getCantidadDisponible() - cartItem.getCantidad());
                         batchRepository.save(batch);
                     }
 
-                    // Actualizar stock de variante
                     variant.setStock(variant.getStock() - cartItem.getCantidad());
                     productVariantRepository.save(variant);
 
@@ -146,9 +145,6 @@ public class OrderService {
         return convertToDTO(orderRepository.save(savedOrder));
     }
 
-    /**
-     * Obtiene un pedido por ID
-     */
     @Transactional(readOnly = true)
     public OrderDTO getOrderById(Long id) {
         Order order = orderRepository.findById(id)
@@ -156,27 +152,18 @@ public class OrderService {
         return convertToDTO(order);
     }
 
-    /**
-     * Obtiene pedidos del usuario
-     */
     @Transactional(readOnly = true)
     public Page<OrderDTO> getOrdersByUser(Long usuarioId, Pageable pageable) {
         return orderRepository.findByUsuarioId(usuarioId, pageable)
                 .map(this::convertToDTO);
     }
 
-    /**
-     * Obtiene todos los pedidos (admin)
-     */
     @Transactional(readOnly = true)
     public Page<OrderDTO> getAllOrders(Pageable pageable) {
         return orderRepository.findAll(pageable)
                 .map(this::convertToDTO);
     }
 
-    /**
-     * Cambia el estado de un pedido
-     */
     @Transactional
     public OrderDTO updateOrderStatus(Long id, String nuevoEstado) {
         Order order = orderRepository.findById(id)
@@ -192,32 +179,39 @@ public class OrderService {
         }
     }
 
-    /**
-     * Convierte entidad Order a DTO
-     */
+    // ==========================================
+    // MAPPERS ACTUALIZADOS (DTOs Completos y con getValue())
+    // ==========================================
+
     private OrderDTO convertToDTO(Order order) {
         List<OrderItemDTO> itemDTOs = order.getItems() != null
-                ? order.getItems().stream()
-                .map(this::convertOrderItemToDTO)
-                .collect(Collectors.toList())
-                : List.of();
+                ? order.getItems().stream().map(this::convertOrderItemToDTO).collect(Collectors.toList())
+                : Collections.emptyList();
 
         List<OrderDTO.PromocionAplicadaDTO> promos = order.getPromocionesAplicadas() != null
-                ? order.getPromocionesAplicadas().stream()
-                .map(ap -> OrderDTO.PromocionAplicadaDTO.builder()
-                        .nombreSnapshot(ap.getNombreSnapshot())
-                        .valorDescuentoAplicado(ap.getValorDescuentoAplicado())
-                        .build())
-                .collect(Collectors.toList())
-                : List.of();
+                ? order.getPromocionesAplicadas().stream().map(this::convertPromoToDTO).collect(Collectors.toList())
+                : Collections.emptyList();
+
+        List<OrderDTO.PagoResumenDTO> pagos = order.getPagos() != null
+                ? order.getPagos().stream().map(this::convertPagoToDTO).collect(Collectors.toList())
+                : Collections.emptyList();
+
+        OrderDTO.EnvioResumenDTO envioDTO = null;
+        if (order.getEnvios() != null && !order.getEnvios().isEmpty()) {
+            Shipment ultimoEnvio = order.getEnvios().get(order.getEnvios().size() - 1);
+            envioDTO = convertEnvioToDTO(ultimoEnvio);
+        }
+
+        // CORRECCIÓN: Usamos getValue() aquí en order.getEstado() también
+        String estadoStr = (order.getEstado() != null) ? order.getEstado().getValue() : "Desconocido";
 
         return OrderDTO.builder()
                 .id(order.getId())
                 .codigo(order.getCodigo())
                 .usuarioId(order.getUsuario().getId())
-                .usuarioNombre(order.getUsuario().getNombre())
+                .usuarioNombre(order.getUsuario().getNombre() + " " + order.getUsuario().getApellido())
                 .fechaPedido(order.getFechaPedido())
-                .estado(order.getEstado().getValue())
+                .estado(estadoStr)
                 .subtotal(order.getSubtotal())
                 .descuento(order.getDescuento())
                 .impuestos(order.getImpuestos())
@@ -228,34 +222,37 @@ public class OrderService {
                 .nota(order.getNota())
                 .items(itemDTOs)
                 .promocionesAplicadas(promos)
+                .pagos(pagos)
+                .envio(envioDTO)
                 .build();
     }
 
-    /**
-     * Convierte OrderItem a DTO
-     */
     private OrderItemDTO convertOrderItemToDTO(OrderItem item) {
         ProductVariant variant = item.getVariante();
-        Product product = variant.getProduct();
+        String imgUrl = "/images/placeholder.png";
+        String productoNombre = "Producto desconocido";
+        Long productoId = null;
 
-        String imgUrl = "/images/placeholder.png"; // URL por defecto
-
-        // Primero buscamos imagen en la variante
-        if (variant.getImagenes() != null && !variant.getImagenes().isEmpty()) {
-            imgUrl = variant.getImagenes().get(0).getUrl();
-        }
-        // Si no, buscamos en el producto padre
-        else if (product.getImagenes() != null && !product.getImagenes().isEmpty()) {
-            imgUrl = product.getImagenes().get(0).getUrl();
+        if (variant != null) {
+            Product product = variant.getProduct();
+            if (product != null) {
+                productoNombre = product.getNombre();
+                productoId = product.getId();
+                if (variant.getImagenes() != null && !variant.getImagenes().isEmpty()) {
+                    imgUrl = variant.getImagenes().get(0).getUrl();
+                } else if (product.getImagenes() != null && !product.getImagenes().isEmpty()) {
+                    imgUrl = product.getImagenes().get(0).getUrl();
+                }
+            }
         }
 
         return OrderItemDTO.builder()
                 .id(item.getId())
                 .pedidoId(item.getPedido().getId())
-                .varianteId(variant.getId())
-                .varianteSku(variant.getSku())
-                .productoNombre(product.getNombre())
-                .productoId(product.getId())
+                .varianteId(variant != null ? variant.getId() : null)
+                .varianteSku(variant != null ? variant.getSku() : "N/A")
+                .productoNombre(productoNombre)
+                .productoId(productoId)
                 .cantidad(item.getCantidad())
                 .precioUnitario(item.getPrecioUnitario())
                 .subtotal(item.getSubtotal())
@@ -267,4 +264,39 @@ public class OrderService {
                 .build();
     }
 
+    private OrderDTO.PromocionAplicadaDTO convertPromoToDTO(AppliedPromotion ap) {
+        return OrderDTO.PromocionAplicadaDTO.builder()
+                .nombreSnapshot(ap.getNombreSnapshot())
+                .valorDescuentoAplicado(ap.getValorDescuentoAplicado())
+                .build();
+    }
+
+    private OrderDTO.PagoResumenDTO convertPagoToDTO(Payment pago) {
+        // CORRECCIÓN: Usamos getValue() para método y estado de pago
+        // Agregamos chequeo de nulos por seguridad
+        String metodoStr = (pago.getMetodo() != null) ? pago.getMetodo().getValue() : null;
+        String estadoStr = (pago.getEstado() != null) ? pago.getEstado().getValue() : null;
+
+        return OrderDTO.PagoResumenDTO.builder()
+                .id(pago.getId())
+                .metodo(metodoStr)
+                .monto(pago.getMonto())
+                .estado(estadoStr)
+                .fechaPago(pago.getFechaPago())
+                .build();
+    }
+
+    private OrderDTO.EnvioResumenDTO convertEnvioToDTO(Shipment envio) {
+        String empresa = (envio.getEmpresa() != null) ? envio.getEmpresa().getNombre() : "Desconocido";
+        // CORRECCIÓN: Usamos getValue() para estado de envío
+        String estadoEnvioStr = (envio.getEstadoEnvio() != null) ? envio.getEstadoEnvio().getValue() : null;
+
+        return OrderDTO.EnvioResumenDTO.builder()
+                .id(envio.getId())
+                .empresaNombre(empresa)
+                .tracking(envio.getTracking())
+                .estado(estadoEnvioStr)
+                .fechaEntregaEstimada(envio.getFechaEntregaEstimada())
+                .build();
+    }
 }
